# pre-commit-test

./: .pre-commit-config.yaml  Makefile  hello.py  pyproject.toml
