[project]
name = "pre-commit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.ruff]
exclude = [
    ".bzr",               # Bazaarリポジトリ
    ".direnv",            # direnvの環境ディレクトリ
    ".eggs",              # Pythonパッケージのビルドディレクトリ
    ".git",               # Gitリポジトリ
    ".git-rewrite",       # Gitの書き換え履歴
    ".hg",                # Mercurialリポジトリ
    ".ipynb_checkpoints", # Jupyter notebookのチェックポイント
    ".mypy_cache",        # mypyのキャッシュディレクトリ
    ".nox",               # noxの環境ディレクトリ
    ".pants.d",           # Pantsビルドシステムのディレクトリ
    ".pyenv",             # pyenvの環境ディレクトリ
    ".pytest_cache",      # pytestのキャッシュディレクトリ
    ".pytype",            # Pytypeのタイプキャッシュ
    ".ruff_cache",        # Ruffのキャッシュディレクトリ
    ".svn",               # Subversionリポジトリ
    ".tox",               # toxの仮想環境ディレクトリ
    ".venv",              # Python仮想環境ディレクトリ
    ".vscode",            # VSCodeの設定ディレクトリ
    "__pypackages__",     # PEP582準拠のパッケージディレクトリ
    "_build",             # ビルド成果物ディレクトリ
    "buck-out",           # Buckビルドシステムの成果物ディレクトリ
    "build",              # ビルドディレクトリ
    "dist",               # 配布物ディレクトリ
    "node_modules",       # Node.jsの依存パッケージ
    "site-packages",      # Pythonの依存パッケージ
    "venv",               # 仮想環境ディレクトリの別名
]
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
